<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.francisco.quizapp.MainActivity">

    <TextView
        style="@style/QuizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_name"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuizQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question1_group"
                style="@style/QuizOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question1_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestion1"
                    android:text="@string/question_1_option_1" />

                <RadioButton
                    android:id="@+id/question1_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestion1"
                    android:text="@string/question_1_option_2" />

                <RadioButton
                    android:id="@+id/question1_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestion1"
                    android:text="@string/question_1_option_3" />
            </RadioGroup>

            <TextView
                style="@style/QuizQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <LinearLayout
                style="@style/QuizOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question2_option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion2"
                    android:text="@string/question_2_option_1" />

                <CheckBox
                    android:id="@+id/question2_option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion2"
                    android:text="@string/question_2_option_2" />

                <CheckBox
                    android:id="@+id/question2_option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion2"
                    android:text="@string/question_2_option_3" />

                <CheckBox
                    android:id="@+id/question2_option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion2"
                    android:text="@string/question_2_option_4" />
            </LinearLayout>

            <TextView
                style="@style/QuizQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/question3_text"
                style="@style/QuizOption"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:maxLines="1" />

            <TextView
                style="@style/QuizQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <LinearLayout
                style="@style/QuizOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question4_option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion4"
                    android:text="@string/question_4_option_1" />

                <CheckBox
                    android:id="@+id/question4_option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion4"
                    android:text="@string/question_4_option_2" />

                <CheckBox
                    android:id="@+id/question4_option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion4"
                    android:text="@string/question_4_option_3" />

                <CheckBox
                    android:id="@+id/question4_option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:onClick="checkQuestion4"
                    android:text="@string/question_4_option_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:onClick="submitQuiz"
                    android:text="@string/button_submit"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:text="@string/button_clear"
                    android:textColor="@android:color/white"
                    android:onClick="resetQuiz"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
